--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  hello world!
+  
+  <div id="header"></div>
+  
 </body>
 </html>
