--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
   
   <div id="header"></div>
-  <div id="main">hello!</div>
+  <div id="main">
+  <div id="logo"> 1 </div>
+  <div id="socials"> twit </div>
+  <div id="navigation"> links! </div>
+  <div id="side"> oop </div>
+  <div id="main-links"> content links! tabbed! </div>
+  <div id="main-content"> content goes oop! </div>
+  </div>
   
 </body>
 </html>
