--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="header"></div>
   <div id="main">
   <div id="logo"> 1 </div>
-  <div id="socials"> twit </div>
+  <div id="socials"> twitters? tumblrs?? idk??? </div>
   <div id="navigation"> links! </div>
   <div id="side"> oop </div>
   <div id="main-links"> content links! tabbed! </div>
