--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <div id="header"></div>
   <div id="main">
-  <div id="logo"> 1 </div>
+  <div id="logo"> <img src="star-cluster.svg"/> </div>
   <div id="socials"> twitters? tumblrs?? idk??? </div>
   <div id="navigation"> links! </div>
   <div id="side"> oop </div>
