--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vidaloka&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/fae657cb20.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -13,7 +14,7 @@
   <div id="header"></div>
   <div id="main">
   <div id="logo"> <img src="star-cluster.svg"/> </div>
-  <div id="socials"> twitters? tumblrs?? idk??? </div>
+  <div id="socials"> <i class="fab fa-twitter"></i> <i class="fab fa-twitter"></i> <i class="fab fa-tumblr"></i> <i class="fab fa-tumblr"></i> </div>
   <div id="navigation"> links! </div>
   <div id="side"> oop </div>
   <div id="main-links"> content links! tabbed! </div>
