--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
   <div id="header"></div>
   <div id="main">
   <div id="logo"> <img src="star-cluster.svg"/> </div>
-  <div id="socials"> <i class="fab fa-twitter"></i> <i class="fab fa-twitter"></i> <i class="fab fa-tumblr"></i> <i class="fab fa-tumblr"></i> </div>
-  <div id="navigation"> links! </div>
+  <div id="socials">
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-tumblr"></i></a>
+    <a href="#"><i class="fab fa-tumblr"></i></a>
+  </div>
+  <div id="navigation">
+    <span><a href>home page</a></span>
+    <span><a href="#">the boys</a></span>
+    <span><a href="#">the ships</a></span>
+  </div>
   <div id="side"> oop </div>
   <div id="main-links"> content links! tabbed! </div>
   <div id="main-content"> content goes oop! </div>
