--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <span><a href="#">the boys</a></span>
     <span><a href="#">the ships</a></span>
   </div>
-  <div id="side"> oop </div>
+  <div id="side"> </div>
   <div id="main-links"> content links! tabbed! </div>
   <div id="main-content"> content goes oop! </div>
   </div>
