--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="#"><i class="fab fa-tumblr"></i></a>
   </div>
   <div id="navigation">
-    <span><a href>home page</a></span>
+    <span><a>home page</a></span>
     <span><a href="#">the boys</a></span>
     <span><a href="#">the ships</a></span>
   </div>
