--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </div>
   <div id="navigation">
     <span><a>home page</a></span>
-    <span><a href="#">the boys</a></span>
-    <span><a href="#">the ships</a></span>
+    <span class="lactive"><a href="#">the boys</a></span>
+    <span class="lactive"><a href="#">the ships</a></span>
   </div>
   <div id="side"> </div>
   <div id="main-links"> content links! tabbed! </div>
