--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="#"><i class="fab fa-tumblr"></i></a>
   </div>
   <div id="navigation">
-    <span><a>home page</a></span>
+    <span><a class="nolink">home page</a></span>
     <span class="lactive"><a href="#">the boys</a></span>
     <span class="lactive"><a href="#">the ships</a></span>
   </div>
