--- a/boys.html
+++ b/boys.html
@@ -23,7 +23,7 @@
   <div id="navigation">
     <span class="lactive"><a href="/index.html">home page</a></span>
     <span><a class="nolink">the boys</a></span>
-    <span class="lactive"><a href="#">the ships</a></span>
+    <span class="lactive"><a href="/ships.html">the ships</a></span>
   </div>
   <div id="side"> </div>
   <div id="main-links"> content links! tabbed! </div>
