--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vidaloka&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fae657cb20.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="indexpage.css">
 </head>
 <body>
   
@@ -27,7 +28,11 @@
   </div>
   <div id="side"> </div>
   <div id="main-links"> content links! tabbed! </div>
-  <div id="main-content"> content goes oop! </div>
+  <div id="main-content"><div id="main-contain">
+    
+    hello!
+    
+  </div></div>
   </div>
   
 </body>
