--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   <div id="main-links"> content links! tabbed! </div>
   <div id="main-content"><div id="main-contain">
     
-    hello!
+    <div class="player" id="dae"></div>
+    <div id="sitename">#MAEDAE</div>
+    <div id="tagline">An archive</div>
+    <div class="player" id="mae"></div>
     
   </div></div>
   </div>
