--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <div class="player" id="dae"></div>
     <div id="sitename">#MAEDAE</div>
-    <div id="tagline">An archive</div>
+    <div id="tagline">A character archive</div>
     <div class="player" id="mae"></div>
     
   </div></div>
