--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <span class="lactive"><a href="/ships.html">the ships</a></span>
   </div>
   <div id="side"> </div>
-  <div id="main-links"> content links! tabbed! </div>
+  <div id="main-links"> coming soon </div>
   <div id="main-content"><div id="main-contain">
     
     <div class="player" id="dae"></div>
