--- a/boys.html
+++ b/boys.html
@@ -26,8 +26,8 @@
     <span class="lactive"><a href="/ships.html">the ships</a></span>
   </div>
   <div id="side"> </div>
-  <div id="main-links"> content links! tabbed! </div>
-  <div id="main-content"> content goes oop! </div>
+  <div id="main-links"> tabbed content links </div>
+  <div id="main-content"> coming soon </div>
   </div>
   
 </body>
