--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     <span class="lactive"><a href="/ships.html">the ships</a></span>
   </div>
   <div id="side"> </div>
-  <div id="main-links"> coming soon </div>
+  <div id="main-links"><div id="main-side">
+  
+    <div id="ms-mae-n" class="ms-name">maeve</div>
+    <div id="ms-mae-i" class="ms-info">hello words!</div>
+    <div id="ms-dae-n" class="ms-name">dae</div>
+    <div id="ms-dae-i" class="ms-info">hi words!</div>
+    
+  </div></div>
   <div id="main-content"><div id="main-contain">
     
     <div class="player" id="dae"></div>
