--- a/boys.html
+++ b/boys.html
@@ -13,6 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serialScroll/1.3.2/jquery.serialScroll.min.js" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="boyspage.css">
+  <script src="boyspage.js" type="text/javascript"></script>
 </head>
 <body>
   
