--- a/boys.html
+++ b/boys.html
@@ -7,13 +7,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Vidaloka&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/fae657cb20.js" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollto/1.4.6/jquery-scrollto.min.js" integrity="sha512-AJcVH5BU8a2lLY4kCICKZCECpW72qvj0LHHdreXq9paUVQx5wiFLv3n4ySnGeRSAbWqTxNnicvhKN9x+/yVDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-localScroll/2.0.0/jquery.localScroll.min.js" integrity="sha512-x/Viuh5YndnrDISWqrZ6rerGnHccdLv/TW2B+xEGqubrLGCT6LdBGhnQxXo1Q4sXFgO12YeRWDYJkIV41OtOTA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.serialScroll/1.3.2/jquery.serialScroll.min.js" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="boyspage.css">
   <script src="boyspage.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
   
@@ -35,32 +32,7 @@
   <div id="main-links"> tabbed content links </div>
   <div id="main-content">
     
-    <div id="slider">
-  <ul class="navigation">
-    <li><a href="#sites">Sites</a></li>
-    <li><a href="#files">Files</a></li>
-    <li><a href="#editor">Editor</a></li>
-    <li><a href="#preview">Preview</a></li>
-    <li><a href="#css">CSS</a></li>
-    <li><a href="#terminal">Terminal</a></li>
-    <li><a href="#books">Books</a></li>
-  </ul>
-
-  <!-- element with overflow applied -->
-  <div class="scroll">
-    <!-- the element that will be scrolled during the effect -->
-    <div class="scrollContainer">
-      <!-- our individual panels -->
-      <div class="panel" id="sites"> ... </div>
-      <div class="panel" id="files"> ... </div>
-      <div class="panel" id="editor"> ... </div>
-      <div class="panel" id="preview"> ... </div>
-      <div class="panel" id="css"> ... </div>
-      <div class="panel" id="terminal"> ... </div>
-      <div class="panel" id="books"> ... </div>
-    </div>
-  </div>
-</div>
+    slider
     
   </div>
   </div>
