--- a/boys.html
+++ b/boys.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="boyspage.css">
   <script src="boyspage.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css">
+  <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
 </head>
 <body>
   
@@ -32,7 +34,12 @@
   <div id="main-links"> tabbed content links </div>
   <div id="main-content">
     
-    slider
+    <div class="carousel gallery">
+  <div class="carousel-cell">...</div>
+  <div class="carousel-cell">...</div>
+  <div class="carousel-cell">...</div>
+  ...
+</div>
     
   </div>
   </div>
