--- a/boys.html
+++ b/boys.html
@@ -9,10 +9,15 @@
   <script src="https://kit.fontawesome.com/fae657cb20.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" type="text/css" href="boyspage.css">
-  <script src="boyspage.js" type="text/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css">
-  <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+
+  <script>
+    $(document).ready(function(){
+      $('.slider').bxSlider();
+    });
+  </script>
 </head>
 <body>
   
@@ -34,12 +39,10 @@
   <div id="main-links"> tabbed content links </div>
   <div id="main-content">
     
-    <div class="carousel gallery">
-  <div class="carousel-cell">...</div>
-  <div class="carousel-cell">...</div>
-  <div class="carousel-cell">...</div>
-  ...
-</div>
+    <div class="slider">
+    <div>I am a slide.</div>
+    <div>I am another slide.</div>
+  </div>
     
   </div>
   </div>
