--- a/boys.html
+++ b/boys.html
@@ -15,10 +15,10 @@
 
   <script>
     $(document).ready(function(){
-      $('.slider').bxSlider({
+      $('.main-slider').bxSlider({
     mode: 'vertical',
     hideControlOnEnd: true,
-        wrapperClass: 'bx-wrapper'
+        wrapperClass: 'boys-wrapper'
   });
     });
   </script>
@@ -43,7 +43,7 @@
   <div id="main-links"> tabbed content links </div>
   <div id="main-content">
     
-    <div class="slider">
+    <div class="main-slider">
     <div>I am a slide.</div>
     <div>I am another slide.</div>
   </div>
