--- a/boys.html
+++ b/boys.html
@@ -44,8 +44,8 @@
   <div id="main-content">
     
     <div class="main-slider">
-    <div>I am a slide.</div>
-    <div>I am another slide.</div>
+    <div class="boy-slide">I am a slide.</div>
+    <div class="boy-slide">I am another slide.</div>
   </div>
     
   </div>
