--- a/boys.html
+++ b/boys.html
@@ -18,7 +18,8 @@
       $('.main-slider').bxSlider({
         mode: 'vertical',
         hideControlOnEnd: true,
-        wrapperClass: 'boys-wrapper'
+        wrapperClass: 'boys-wrapper',
+        pagerSelector: '#the-boys',
       });
     });
   </script>
