--- a/boys.html
+++ b/boys.html
@@ -20,6 +20,8 @@
         hideControlOnEnd: true,
         wrapperClass: 'boys-wrapper',
         pagerSelector: '#the-boys',
+        nextSelector: '#next-button',
+        prevSelector: '#prev-button'
       });
     });
   </script>
@@ -44,6 +46,8 @@
   <div id="main-links">
     
     tabbed content links
+    <div id="next-button"></div>
+    <div id="prev-button"></div>
     <div id="the-boys"></div>
     
   </div>
