--- a/boys.html
+++ b/boys.html
@@ -19,8 +19,7 @@
         mode: 'vertical',
         hideControlOnEnd: true,
         wrapperClass: 'boys-wrapper',
-        pagerSelector: '#the-boys',
-        pagerCustom: '<div class="boys-pager"><div class="boys-pager-item"><a data-slide-index="0" class="boys-pager-link active">boy 1</a></div><div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link">boy 2</a></div><div class="boys-pager-item"><a data-slide-index="2" class="boys-pager-link">boy 3</a></div><div class="boys-pager-item"><a data-slide-index="3" class="boys-pager-link">boy 4</a></div><div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link">boy 5</a></div><div class="boys-pager-item"><a data-slide-index="5" class="boys-pager-link">boy 6</a></div></div>',
+        pagerCustom: '#the-boys',
         nextSelector: '#next-button',
         prevSelector: '#prev-button'
       });
@@ -49,7 +48,7 @@
     tabbed content links
     <div id="next-button"></div>
     <div id="prev-button"></div>
-    <div id="the-boys"></div>
+    <div id="the-boys"><div class="boys-pager"><div class="boys-pager-item"><a data-slide-index="0" class="boys-pager-link active">boy 1</a></div><div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link">boy 2</a></div><div class="boys-pager-item"><a data-slide-index="2" class="boys-pager-link">boy 3</a></div><div class="boys-pager-item"><a data-slide-index="3" class="boys-pager-link">boy 4</a></div><div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link">boy 5</a></div><div class="boys-pager-item"><a data-slide-index="5" class="boys-pager-link">boy 6</a></div></div></div>
     
   </div>
   <div id="main-content">
