--- a/boys.html
+++ b/boys.html
@@ -46,8 +46,10 @@
   <div id="main-links">
     
     tabbed content links
-    <div id="next-button"></div>
-    <div id="prev-button"></div>
+    <div id="button-contain">
+      <div id="prev-button"></div>
+      <div id="next-button"></div>
+    </div>
     <div id="the-boys"><div class="boys-pager">
       <div class="boys-pager-item"><a data-slide-index="0" class="boys-pager-link active">Gabe</a></div>
       <div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link">June</a></div>
