--- a/boys.html
+++ b/boys.html
@@ -54,12 +54,12 @@
       <div id="b-next"><div id="next-button"></div></div>
     </div>
     <div id="the-boys"><div class="boys-pager">
-      <div class="boys-pager-item"><a data-slide-index="0" class="boys-pager-link active">Gabe</a></div>
-      <div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link">June</a></div>
-      <div class="boys-pager-item"><a data-slide-index="2" class="boys-pager-link">Ori</a></div>
-      <div class="boys-pager-item"><a data-slide-index="3" class="boys-pager-link">Pawn</a></div>
-      <div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link">Roman</a></div>
-      <div class="boys-pager-item"><a data-slide-index="5" class="boys-pager-link">Tai</a></div>
+      <div class="boys-pager-item"><a data-slide-index="0" class="boys-pager-link active"><div class="boy-blob boy-g"><div></div></div><span>Gabe</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link"><div class="boy-blob boy-j"><div></div></div><span>June</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="2" class="boys-pager-link"><div class="boy-blob boy-o"><div></div></div><span>Ori</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="3" class="boys-pager-link"><div class="boy-blob boy-p"><div></div></div><span>Pawn</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link"><div class="boy-blob boy-r"><div></div></div><span>Roman</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="5" class="boys-pager-link"><div class="boy-blob boy-t"><div></div></div><span>Tai</span></a></div>
     </div></div>
     
   </div>
