--- a/boys.html
+++ b/boys.html
@@ -66,7 +66,10 @@
   <div id="main-content">
     
     <div class="main-slider">
-    <div class="boy-slide" id="gabe-page">Gabe</div>
+    <div class="boy-slide" id="gabe-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name">Gabriel</div>
+    </div>
     <div class="boy-slide" id="june-page">June</div>
     <div class="boy-slide" id="ori-page">Ori</div>
     <div class="boy-slide" id="pawn-page">Pawn</div>
