--- a/boys.html
+++ b/boys.html
@@ -68,7 +68,7 @@
     <div class="main-slider">
     <div class="boy-slide" id="gabe-page">
       <div class="boy-main-image"><div></div></div>
-      <div class="boy-name"><span>Gabriel</span><span>Sikaeo</span></div>
+      <div class="boy-name"><span class="name-first">Gabriel</span><span class="name-last">Sikaeo</span></div>
     </div>
     <div class="boy-slide" id="june-page">June</div>
     <div class="boy-slide" id="ori-page">Ori</div>
