--- a/boys.html
+++ b/boys.html
@@ -70,11 +70,26 @@
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Gabriel</span><span class="name-last">Sikaeo</span></div>
     </div>
-    <div class="boy-slide" id="june-page">June</div>
-    <div class="boy-slide" id="ori-page">Ori</div>
-    <div class="boy-slide" id="pawn-page">Pawn</div>
-    <div class="boy-slide" id="roman-page">Roman</div>
-    <div class="boy-slide" id="tai-page">Tai</div>
+    <div class="boy-slide" id="june-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name"><span class="name-first">Joon-Eun</span><span class="name-last">Yeom</span></div>
+    </div>
+    <div class="boy-slide" id="ori-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name"><span class="name-first">Orion</span><span class="name-last">Surname</span></div>
+    </div>
+    <div class="boy-slide" id="pawn-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name"><span class="name-first">Pawn</span><span class="name-last">Surname</span></div>
+    </div>
+    <div class="boy-slide" id="roman-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name"><span class="name-first">Roman</span><span class="name-last">Sikaeo</span></div>
+    </div>
+    <div class="boy-slide" id="tai-page">
+      <div class="boy-main-image"><div></div></div>
+      <div class="boy-name"><span class="name-first">Tae-Soo</span><span class="name-last">Park</span></div>
+    </div>
   </div>
     
   </div>
