--- a/boys.html
+++ b/boys.html
@@ -23,7 +23,8 @@
         nextSelector: '#next-button',
         nextText: '→',
         prevText: '←',
-        prevSelector: '#prev-button'
+        prevSelector: '#prev-button',
+        touchEnabled: false
       });
     });
   </script>
