--- a/boys.html
+++ b/boys.html
@@ -77,11 +77,11 @@
     </div>
     <div class="boy-slide" id="ori-page">
       <div class="boy-main-image"><div></div></div>
-      <div class="boy-name"><span class="name-first">Orion</span><span class="name-last">Surname</span></div>
+      <div class="boy-name"><span class="name-first">Orion</span><span class="name-last">Meyer-Lee</span></div>
     </div>
     <div class="boy-slide" id="pawn-page">
       <div class="boy-main-image"><div></div></div>
-      <div class="boy-name"><span class="name-first">Pawn</span><span class="name-last">Surname</span></div>
+      <div class="boy-name"><span class="name-first">Pahn</span><span class="name-last">Min-ho</span></div>
     </div>
     <div class="boy-slide" id="roman-page">
       <div class="boy-main-image"><div></div></div>
