--- a/boys.html
+++ b/boys.html
@@ -70,32 +70,32 @@
     <div class="boy-slide" id="gabe-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Gabriel</span><span class="name-last">Sikaeo</span></div>
-      <div class="boy-quote"><span>"</span><span>"</span></div>
+      <div class="boy-quote"><span>"</span>is it okay that I fell in love with you a little bit just now?<span>"</span></div>
     </div>
     <div class="boy-slide" id="june-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Joon-Eun</span><span class="name-last">Yeom</span></div>
-      <div class="boy-quote"><span>"</span><span>"</span></div>
+      <div class="boy-quote"><span>"</span>Shut up or my monopoly prices triple.<span>"</span></div>
     </div>
     <div class="boy-slide" id="ori-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Orion</span><span class="name-last">Meyer-Lee</span></div>
-      <div class="boy-quote"><span>"</span><span>"</span></div>
+      <div class="boy-quote"><span>"</span>TF do you mean you jumped through space in a magic marble??? Explain yourself.<span>"</span></div>
     </div>
     <div class="boy-slide" id="pawn-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Pahn</span><span class="name-last">Min-ho</span></div>
-      <div class="boy-quote"><span>"</span><span>"</span></div>
+      <div class="boy-quote"><span>"</span>...I really should have stabbed you.<span>"</span></div>
     </div>
     <div class="boy-slide" id="roman-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Roman</span><span class="name-last">Sikaeo</span></div>
-      <div class="boy-quote"><span>"</span>I will always find my way back to you.<span>"</span></div>
+      <div class="boy-quote"><span>"</span>you saved him, I raised him, we are not the same<span>"</span></div>
     </div>
     <div class="boy-slide" id="tai-page">
       <div class="boy-main-image"><div></div></div>
       <div class="boy-name"><span class="name-first">Tae-Soo</span><span class="name-last">Park</span></div>
-      <div class="boy-quote"><span>"</span><span>"</span></div>
+      <div class="boy-quote"><span>"</span>So much salt and still so little spice in your bedroom.<span>"</span></div>
     </div>
   </div>
     
