--- a/boys.html
+++ b/boys.html
@@ -59,7 +59,7 @@
       <div class="boys-pager-item"><a data-slide-index="1" class="boys-pager-link"><div class="boy-blob boy-j"><div></div></div><span>June</span></a></div>
       <div class="boys-pager-item"><a data-slide-index="2" class="boys-pager-link"><div class="boy-blob boy-o"><div></div></div><span>Ori</span></a></div>
       <div class="boys-pager-item"><a data-slide-index="3" class="boys-pager-link"><div class="boy-blob boy-p"><div></div></div><span>Pawn</span></a></div>
-      <div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link"><div class="boy-blob boy-r"><div></div></div><span>Roman</span></a></div>
+      <div class="boys-pager-item"><a data-slide-index="4" class="boys-pager-link"><div class="boy-blob boy-r"><div></div></div><span>Rome</span></a></div>
       <div class="boys-pager-item"><a data-slide-index="5" class="boys-pager-link"><div class="boy-blob boy-t"><div></div></div><span>Tai</span></a></div>
     </div></div>
     
