--- a/boys.html
+++ b/boys.html
@@ -78,6 +78,10 @@
         <div class="sml-deet deet-l-b"><span>written by</span> maeve</div>
         <div class="sml-deet deet-r-b"><span>date of birth</span> mar 28th 1998 @ 05:27am</div>
       </div>
+      <div class="boy-family">
+        <h1>family</h1>
+        <div class="word-block">hello words! <h3>header</h3></div>
+      </div>
     </div>
       
     <div class="boy-slide" id="june-page">
