--- a/boys.html
+++ b/boys.html
@@ -82,6 +82,10 @@
         <h1>family</h1>
         <div class="word-block">hello words! <h3>header</h3></div>
       </div>
+      <div class="boy-block">
+        <h1>astrology</h1>
+        <div class="astro-block">astrology!!!</div>
+      </div>
     </div>
       
     <div class="boy-slide" id="june-page">
