--- a/boys.html
+++ b/boys.html
@@ -87,8 +87,8 @@
         <div class="astro-block">
           
         <div class="chart">
-        <div class="div1"> S<br>I<br>G<br>N<br>S </div>
-        <div class="div2"> H<br>O<br>U<br>S<br>E<br>S </div>
+        <div class="div1"> <span>S<br>I<br>G<br>N<br>S</span> </div>
+        <div class="div2"> <span>H<br>O<br>U<br>S<br>E<br>S</span> </div>
         <div class="div3"> ascendant </div>
         <div class="div4"> sun </div>
         <div class="div5"> moon </div>
