--- a/boys.html
+++ b/boys.html
@@ -89,20 +89,20 @@
         <div class="chart">
         <div class="div1"> <span>S<br>I<br>G<br>N<br>S</span> </div>
         <div class="div2"> <span>H<br>O<br>U<br>S<br>E<br>S</span> </div>
-        <div class="div3"> ascendant </div>
-        <div class="div4"> sun </div>
-        <div class="div5"> moon </div>
-        <div class="div6"> mercury </div>
-        <div class="div7"> mars </div>
-        <div class="div8"> saturn </div>
-        <div class="div9"> jupiter </div>
-        <div class="div10"> pluto </div>
-        <div class="div11"> venus </div>
-        <div class="div12"> uranus </div>
-        <div class="div13"> neptune </div>
-        <div class="div14"> 1 </div>
-        <div class="div15"> 9 </div>
-        <div class="div16"> 12 </div>
+        <div class="div3 planet"> ascendant </div>
+        <div class="div4 planet"> sun </div>
+        <div class="div5 planet"> moon </div>
+        <div class="div6 planet"> mercury </div>
+        <div class="div7 planet"> mars </div>
+        <div class="div8 planet"> saturn </div>
+        <div class="div9 planet"> jupiter </div>
+        <div class="div10 planet"> pluto </div>
+        <div class="div11 planet"> venus </div>
+        <div class="div12 planet"> uranus </div>
+        <div class="div13 planet"> neptune </div>
+        <div class="div14 house"> 1 </div>
+        <div class="div15 house"> 9 </div>
+        <div class="div16 house"> 12 </div>
         <div class="div17"> pisces </div>
         <div class="div18"> aries </div>
         <div class="div19"> pisces </div>
