--- a/boys.html
+++ b/boys.html
@@ -103,11 +103,11 @@
         <div class="div14 house"> 1 </div>
         <div class="div15 house"> 9 </div>
         <div class="div16 house"> 12 </div>
-        <div class="div17"> pisces </div>
-        <div class="div18"> aries </div>
-        <div class="div19"> pisces </div>
-        <div class="div20"> sagittarius </div>
-        <div class="div21"> aquarius </div>
+        <div class="div17"> Pisces </div>
+        <div class="div18"> Aries </div>
+        <div class="div19"> Pisces </div>
+        <div class="div20"> Sagittarius </div>
+        <div class="div21"> Aquarius </div>
         </div>
           
         </div>
