--- a/boys.html
+++ b/boys.html
@@ -28,6 +28,13 @@
       });
     });
   </script>
+  <script>
+    $(document).ready(function(){
+      $( ".planet:contains('ascendant')" ).css( "font-weight", "bold" );
+      $( ".planet:contains('sun')" ).css( "font-weight", "bold" );
+      $( ".planet:contains('moon')" ).css( "font-weight", "bold" );
+    });
+  </script>
 </head>
 <body>
   
