--- a/boys.html
+++ b/boys.html
@@ -97,7 +97,7 @@
         <div class="div1"> <span>S<br>I<br>G<br>N<br>S</span> </div>
         <div class="div2"> <span>H<br>O<br>U<br>S<br>E<br>S</span> </div>
         <div class="div3 planet"> ascendant </div>
-        <div class="div4 planet"> sun </div>
+        <div class="div4 planet"> <i>A</i> sun </div>
         <div class="div5 planet"> moon </div>
         <div class="div6 planet"> mercury </div>
         <div class="div7 planet"> mars </div>
