--- a/boys.html
+++ b/boys.html
@@ -87,7 +87,7 @@
       </div>
       <div class="boy-block boy-div">
         <h1>family</h1>
-        <div class="word-block">hello words! <h3>header</h3></div>
+        <div class="word-block"><h3>header</h3> hello words!</div>
       </div>
       <div class="boy-block">
         <h1>astrology</h1>
@@ -96,17 +96,17 @@
         <div class="chart">
         <div class="div1"> <span>S<br>I<br>G<br>N<br>S</span> </div>
         <div class="div2"> <span>H<br>O<br>U<br>S<br>E<br>S</span> </div>
-        <div class="div3 planet"> ascendant </div>
+        <div class="div3 planet"> <i>P</i> ascendant </div>
         <div class="div4 planet"> <i>A</i> sun </div>
-        <div class="div5 planet"> moon </div>
-        <div class="div6 planet"> mercury </div>
-        <div class="div7 planet"> mars </div>
-        <div class="div8 planet"> saturn </div>
-        <div class="div9 planet"> jupiter </div>
-        <div class="div10 planet"> pluto </div>
-        <div class="div11 planet"> venus </div>
-        <div class="div12 planet"> uranus </div>
-        <div class="div13 planet"> neptune </div>
+        <div class="div5 planet"> <i>B</i> moon </div>
+        <div class="div6 planet"> <i>C</i> mercury </div>
+        <div class="div7 planet"> <i>E</i> mars </div>
+        <div class="div8 planet"> <i>G</i> saturn </div>
+        <div class="div9 planet"> <i>F</i> jupiter </div>
+        <div class="div10 planet"> <i>J</i> pluto </div>
+        <div class="div11 planet"> <i>D</i> venus </div>
+        <div class="div12 planet"> <i>H</i> uranus </div>
+        <div class="div13 planet"> <i>I</i> neptune </div>
         <div class="div14 house"> 1 </div>
         <div class="div15 house"> 9 </div>
         <div class="div16 house"> 12 </div>
