--- a/boys.html
+++ b/boys.html
@@ -160,14 +160,14 @@
         <div class="div18 house"> 10 </div>
         <div class="div19 house"> 11 </div>
         <div class="div20 house"> 12 </div>
-        <div class="div21"> taurus </div>
-        <div class="div22"> gemini </div>
-        <div class="div23"> virgo </div>
-        <div class="div24"> scorpio </div>
-        <div class="div25"> sagittarius </div>
-        <div class="div26"> capricorn </div>
-        <div class="div27"> aquarius </div>
-        <div class="div28"> aries </div>
+        <div class="div21"> Taurus </div>
+        <div class="div22"> Gemini </div>
+        <div class="div23"> Virgo </div>
+        <div class="div24"> Scorpio </div>
+        <div class="div25"> Sagittarius </div>
+        <div class="div26"> Capricorn </div>
+        <div class="div27"> Aquarius </div>
+        <div class="div28"> Aries </div>
         </div>
           
         </div>
