--- a/boys.html
+++ b/boys.html
@@ -30,17 +30,9 @@
   </script>
   <script>
     $(document).ready(function(){
-      $( ".planet:contains('ascendant')" ).css( "font-weight", "bold" ).prop( "title", "Your ascendant is the mask you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older." );
-      $( ".planet:contains('sun')" ).css( "font-weight", "bold" ).prop( "title", "The sun determines your ego, identity, and role in life. It's the core of who you are, and it the sign you're most likely to already know." );
-      $( ".planet:contains('moon')" ).css( "font-weight", "bold" ).prop( "title", "The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable." );
-      $( ".planet:contains('mercury')" ).prop( "title", "Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet." );
-      $( ".planet:contains('mars')" ).prop( "title", "Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you - particularly in your sex life, your ambitiousness, and when you're angry." );
-      $( ".planet:contains('saturn')" ).prop( "title", "The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline." );
-      $( ".planet:contains('jupiter')" ).prop( "title", "One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical." );
-      $( ".planet:contains('pluto')" ).prop( "title", "Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control." );
-      $( ".planet:contains('venus')" ).prop( "title", "Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to." );
-      $( ".planet:contains('uranus')" ).prop( "title", "Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress." );
-      $( ".planet:contains('neptune')" ).prop( "title", "Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious." );
+      $( ".planet:contains('ascendant')" ).css( "font-weight", "bold" );
+      $( ".planet:contains('sun')" ).css( "font-weight", "bold" );
+      $( ".planet:contains('moon')" ).css( "font-weight", "bold" );
     });
   </script>
   <script>
