--- a/boys.html
+++ b/boys.html
@@ -512,58 +512,58 @@ $(document).ready(function() {
 	<div class="analysis-container">
 		<div class="analysis-block">
 			<div class="analysis-symbol">A</div>
-			<div class="analysis-stats"><div>SUN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SUN</div><div>VIRGO, 29°48'39"</div><div>FIFTH HOUSE</div></div>
+			<div class="analysis-analysis">The sun determines your ego, identity, and "role" in life. It's the core of who you are, and is the sign you're most likely to already know. Your Sun is in Virgo, meaning you are particularly smart, responsible, hard-working, and self-sacrificing. You're thorough, meticulous, and intentional in everything you do—you can accomplish things that most people can't, but may also get bogged down by the details of your day-to-day. You have a need to be wholesome. It's in your fifth house, meaning you feel the need to distinguish yourself from others through romance, self-expression, creativity, and pleasure.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">P</div>
-			<div class="analysis-stats"><div>ASCENDANT</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>ASCENDANT</div><div>TAURUS, 12°6'49"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Your ascendant is the "mask" you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older. It changes every two hours, so if it doesn't make sense, text your mom to confirm your birth time. Your Ascendant is in Taurus, meaning you come across as highly attuned to practical and material matters, especially pleasure and hedonism. But that same materiality gives people the impression that you are reliable, settled, sensible, and deliberate, though sometimes stubborn.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
-			<div class="analysis-stats"><div>MOON</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MOON</div><div>GEMINI, 20°32'48"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable. Your Moon is in Gemini, meaning your emotional self is often restless and unsettled. You're extremely adaptable, which sometimes makes you feel pulled in too many directions. You are easily bored and need to feel like you are free to be creative and create meaning, which can make you feel like you're in a constant identity crisis. It's in your second house, meaning you find security and safety through money and material possessions.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">C</div>
-			<div class="analysis-stats"><div>MERCURY</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MERCURY</div><div>VIRGO, 13°47'30"</div><div>FIFTH HOUSE</div></div>
+			<div class="analysis-analysis">Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet. Your Mercury is in Virgo, meaning your intellect is analytical, precise, and diligent. Your unbiased sense of logic can make you seem a bit clinical—you have a tendency to be nitpicky and point out what's wrong rather than what's right. You're a planner and pay attention to the details. It's in your fifth house, meaning you are curious about and inclined to analyze your love life, how to become happy, and your creative projects.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">D</div>
-			<div class="analysis-stats"><div>VENUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>VENUS</div><div>SCORPIO, 12°22'19"</div><div>SEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to. Your Venus is in Scorpio, meaning your romantic side is mysterious, passionate, and seductive. The intense depths of your devotion make for a mad and boundless love, though they may sometimes mutate into suspicion, jealousy, and cruelty, making your love life somewhat tumultuous. It's in your seventh house, meaning that for you, love is often expressed in close relationships and long-term partnerships.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">E</div>
-			<div class="analysis-stats"><div>MARS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MARS</div><div>SCORPIO, 25°45'10"</div><div>SEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you—particularly in your sex life, your ambitiousness, and when you're angry. Your Mars is in Scorpio, meaning you assert yourself in a way that is serious and incisive, and you push things forward with passion and intensity. Once you decide you want to do something, you don't hold back. It's in your seventh house, meaning you put a lot of energy into close relationships and long-term partnerships.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">F</div>
-			<div class="analysis-stats"><div>JUPITER</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>JUPITER</div><div>AQUARIUS, 12°28'52"</div><div>TENTH HOUSE</div></div>
+			<div class="analysis-analysis">One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical. Your Jupiter is in Aquarius, meaning you grow and find understanding through detached analysis and intellectual pursuits. It's in your tenth house, meaning you find success through goals and responsibility.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">G</div>
-			<div class="analysis-stats"><div>SATURN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SATURN</div><div>ARIES, 18°14'22"</div><div>TWELFTH HOUSE</div></div>
+			<div class="analysis-analysis">The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline. Your Saturn is in Aries, meaning you struggle with aggression, impatience, defensiveness, hastiness, and conceit. It's in your twelfth house, meaning you have had difficulties with privacy, secrets, and introspection.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">H</div>
-			<div class="analysis-stats"><div>URANUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>URANUS</div><div>AQUARIUS, 4°55'36"</div><div>TENTH HOUSE</div></div>
+			<div class="analysis-analysis">Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress. Your Uranus is in Aquarius, meaning other generations are shocked by your generation's unconventionality, intellectuality, and detachedness. It's in your tenth house, meaning that for you, this manifests in rebelling against dated expectations about goals, success, and responsibility.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">I</div>
-			<div class="analysis-stats"><div>NEPTUNE</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>NEPTUNE</div><div>CAPRICORN, 27°15'5"</div><div>TENTH HOUSE</div></div>
+			<div class="analysis-analysis">Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious. Your Neptune is in Capricorn, meaning your entire generation finds inspiration through hard work, responsibility, seriousness, and ambition. It's in your tenth house, meaning that for you, this manifests in your ideal—verging on unrealistic and impractical—about success and responsibility.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">J</div>
-			<div class="analysis-stats"><div>PLUTO</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>PLUTO</div><div>SAGITTARIUS, 3°16'47"</div><div>EIGHTH HOUSE</div></div>
+			<div class="analysis-analysis">Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control. Your Pluto is in Sagittarius, meaning your generation's psyche is comparatively positive, free-spirited, curious, optimistic, forward-looking, independent, and confident. It's in your eighth house, meaning you personally are transforming outdated taboos around darkness, sex, and transformation.</div>
 		</div> 
 	</div>
   </div>
