--- a/boys.html
+++ b/boys.html
@@ -571,58 +571,58 @@ $(document).ready(function() {
 	<div class="analysis-container">
 		<div class="analysis-block">
 			<div class="analysis-symbol">A</div>
-			<div class="analysis-stats"><div>SUN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SUN</div><div>SAGITTARIUS, 14°4'2"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">The sun determines your ego, identity, and "role" in life. It's the core of who you are, and is the sign you're most likely to already know. Your Sun is in Sagittarius, meaning you are fundamentally curious, restless, and independent. You have strong, thought-through ideas about meaning and what's right or wrong. Interested in pushing the boundaries of the existent, you live to be free, and to learn. It's in your second house, meaning you feel the need to distinguish yourself from others through material possessions and security.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">P</div>
-			<div class="analysis-stats"><div>ASCENDANT</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>ASCENDANT</div><div>LIBRA, 26°19'11"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Your ascendant is the "mask" you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older. It changes every two hours, so if it doesn't make sense, text your mom to confirm your birth time. Your Ascendant is in Libra, meaning you come across as compromising, courteous, and fair-minded, though sometimes passive aggressive. You seem inclined towards balance in all forms—aesthetic, romantic, and judgment.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
-			<div class="analysis-stats"><div>MOON</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MOON</div><div>AQUARIUS, 29°51'16"</div><div>FOURTH HOUSE</div></div>
+			<div class="analysis-analysis">The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable. Your Moon is in Aquarius, meaning your emotional self is intuitive, observant, detached, and rational. You are often in your own world, but are scared of how you truly feel. It's in your fourth house, meaning you find security and safety through your home and family.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">C</div>
-			<div class="analysis-stats"><div>MERCURY</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MERCURY</div><div>CAPRICORN, 3°10'43"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet. Your Mercury is in Capricorn, meaning your intellect is conservative, practical, serious, efficient, and rational. You tend to be a poor communicator, but think through things in a methodical and grounded way. It's in your second house, meaning you are curious about and inclined to analyze what is valuable to you, the resources (talents, money, self-worth) you have, and the resources you want.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">D</div>
-			<div class="analysis-stats"><div>VENUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>VENUS</div><div>CAPRICORN, 26°32'17"</div><div>THIRD HOUSE</div></div>
+			<div class="analysis-analysis">Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to. Your Venus is in Capricorn, meaning your romantic side is somewhat repressed in the name of responsibility and rationality. Sometimes it seems like you don't care about love. You're extremely cautious and appreciate stability. It's in your third house, meaning that for you, love is often expressed in the things you know and are familiar with.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">E</div>
-			<div class="analysis-stats"><div>MARS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MARS</div><div>CAPRICORN, 20°34'40"</div><div>THIRD HOUSE</div></div>
+			<div class="analysis-analysis">Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you—particularly in your sex life, your ambitiousness, and when you're angry. Your Mars is in Capricorn, meaning you assert yourself in a way that is responsible and efficient, and you think things through very intentionally. Highly motivated by ambition, your rationality sometimes seems soulless. It's in your third house, meaning you put a lot of energy into the things you know and are familiar with.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">F</div>
-			<div class="analysis-stats"><div>JUPITER</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>JUPITER</div><div>AQUARIUS, 17°22'57"</div><div>FOURTH HOUSE</div></div>
+			<div class="analysis-analysis">One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical. Your Jupiter is in Aquarius, meaning you grow and find understanding through detached analysis and intellectual pursuits. It's in your fourth house, meaning you find success through your home and family.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">G</div>
-			<div class="analysis-stats"><div>SATURN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SATURN</div><div>ARIES, 13°37'44"</div><div>SIXTH HOUSE</div></div>
+			<div class="analysis-analysis">The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline. Your Saturn is in Aries, meaning you struggle with aggression, impatience, defensiveness, hastiness, and conceit. It's in your sixth house, meaning you have had difficulties with your day-to-day routines, work, and bodily health.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">H</div>
-			<div class="analysis-stats"><div>URANUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>URANUS</div><div>AQUARIUS, 5°52'56"</div><div>THIRD HOUSE</div></div>
+			<div class="analysis-analysis">Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress. Your Uranus is in Aquarius, meaning other generations are shocked by your generation's unconventionality, intellectuality, and detachedness. It's in your third house, meaning that for you, this manifests in rebelling against dated expectations about the things you know and are familiar with.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">I</div>
-			<div class="analysis-stats"><div>NEPTUNE</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>NEPTUNE</div><div>CAPRICORN, 28°5'20"</div><div>THIRD HOUSE</div></div>
+			<div class="analysis-analysis">Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious. Your Neptune is in Capricorn, meaning your entire generation finds inspiration through hard work, responsibility, seriousness, and ambition. It's in your third house, meaning that for you, this manifests in your ideal—verging on unrealistic and impractical—about the things you know and are familiar with.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">J</div>
-			<div class="analysis-stats"><div>PLUTO</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>PLUTO</div><div>SAGITTARIUS, 5°48'37"</div><div>SECOND HOUSE</div></div>
+			<div class="analysis-analysis">Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control. Your Pluto is in Sagittarius, meaning your generation's psyche is comparatively positive, free-spirited, curious, optimistic, forward-looking, independent, and confident. It's in your second house, meaning you personally are transforming outdated relationships to money, material possessions, and security.</div>
 		</div> 
 	</div>
   </div>
