--- a/boys.html
+++ b/boys.html
@@ -630,13 +630,13 @@ $(document).ready(function() {
 	<div class="analysis-container">
 		<div class="analysis-block">
 			<div class="analysis-symbol">A</div>
-			<div class="analysis-stats"><div>SUN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SUN</div><div>GEMINI, 24°47'8"</div><div>TWELFTH HOUSE</div></div>
+			<div class="analysis-analysis">The sun determines your ego, identity, and "role" in life. It's the core of who you are, and is the sign you're most likely to already know. Your Sun is in Gemini, meaning you are fundamentally dynamic, quick-witted, eclectic, and curious. Fascinated by everything, your childlike energy is often scattered in a million directions. On a social level, this may come off as gossipy or flaky. It's in your twelfth house, meaning you feel the need to distinguish yourself from others through privacy, secrets, and introspection.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">P</div>
-			<div class="analysis-stats"><div>ASCENDANT</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>ASCENDANT</div><div>CANCER, 6°28'26"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">Your ascendant is the "mask" you present to people. It can be seen in your personal style and how you come off to people when you first meet. Some say it becomes less relevant as you get older. It changes every two hours, so if it doesn't make sense, text your mom to confirm your birth time. Your Ascendant is in Cancer, meaning you come across as gentle, intuitive, and warm, though some may regard this as overly emotional or sensitive to criticism.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
