--- a/boys.html
+++ b/boys.html
@@ -640,48 +640,48 @@ $(document).ready(function() {
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">B</div>
-			<div class="analysis-stats"><div>MOON</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MOON</div><div>PISCES, 24°35'21"</div><div>TENTH HOUSE</div></div>
+			<div class="analysis-analysis">The moon rules your emotions, moods, and feelings. This is likely the sign you most think of yourself as, since it reflects your personality when you're alone or deeply comfortable. Your Moon is in Pisces, meaning your emotional self is empathetic, dreamy, sensitive, and gentle. You feel vulnerable much of the time, and desperately wish for a partner who deeply understands you. It's in your tenth house, meaning you find security and safety through success and responsibility.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">C</div>
-			<div class="analysis-stats"><div>MERCURY</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MERCURY</div><div>GEMINI, 6°52'41"</div><div>TWELFTH HOUSE</div></div>
+			<div class="analysis-analysis">Mercury determines how you communicate, talk, think, and process information. It also indicates how you learn. It is the mind's planet. Your Mercury is in Gemini, meaning your intellect is dynamic, quick-witted, and eclectic. You're deeply curious about everything, and your energy is often scattered in a million directions. The way you speak is articulate and witty, but you're likely to talk behind people's backs. It's in your twelfth house, meaning you are curious about and inclined to analyze your secrets, dreams, and mental health.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">D</div>
-			<div class="analysis-stats"><div>VENUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>VENUS</div><div>TAURUS, 19°35'2"</div><div>ELEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Venus determines how and what you love. It indicates how you express affection and the qualities you're attracted to. Your Venus is in Taurus, meaning your romantic side is oriented toward comfort and stability. You move slowly and deliberately at the beginning of relationships; that timidity sometimes comes off as intimidating. You just want something sweet and simple. It's in your eleventh house, meaning that for you, love is often expressed in social status, including platonic and casual friends, along with your hopes, wishes, and dreams.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">E</div>
-			<div class="analysis-stats"><div>MARS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>MARS</div><div>ARIES, 11°31'52"</div><div>ELEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Mars is the planet of aggression. It determines how you assert yourself, take action, and the energy that surrounds you—particularly in your sex life, your ambitiousness, and when you're angry. Your Mars is in Aries, meaning you assert yourself in a way that is to the point and impulsive. You love to make things happen and you push things forward with energy and enthusiasm. You have a short temper, but are quick to forgive. The bravest sign of the zodiac. It's in your eleventh house, meaning you put a lot of energy into social status, including platonic and casual friends, along with your hopes, wishes, and dreams.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">F</div>
-			<div class="analysis-stats"><div>JUPITER</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>JUPITER</div><div>CANCER, 16°2'22"</div><div>FIRST HOUSE</div></div>
+			<div class="analysis-analysis">One of the two social planets, Jupiter rules idealism, optimism, and expansion. It's also very philosophical. Your Jupiter is in Cancer, meaning you grow and find understanding through emotions, intuition, and care. It's in your first house, meaning you find success through your self and self-image—and, because it's your first house, your Jupiter in Cancer is hyper-present in your personality.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">G</div>
-			<div class="analysis-stats"><div>SATURN</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>SATURN</div><div>CAPRICORN, 23°58'59"</div><div>EIGHTH HOUSE</div></div>
+			<div class="analysis-analysis">The other social planet, Saturn rules responsibility, restrictions, limits, boundaries, fears, and self-discipline. Your Saturn is in Capricorn, meaning you struggle with your sense of responsibility, ambition, conservatism, repressed emotions, and obsessions with money and power. It's in your eighth house, meaning you have had difficulties with darkness, taboos, rebirth, sex, and transformation.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">H</div>
-			<div class="analysis-stats"><div>URANUS</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>URANUS</div><div>CAPRICORN, 8°7'46"</div><div>SEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Uranus stays in each sign for seven years, meaning it rules a generation more than a person. It rules innovation, rebellion, and progress. Your Uranus is in Capricorn, meaning other generations are shocked by your generation's sense of responsibility, seriousness, rationality, and hunger for power. It's in your seventh house, meaning that for you, this manifests in rebelling against dated expectations about close relationships and long-term partnerships.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">I</div>
-			<div class="analysis-stats"><div>NEPTUNE</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>NEPTUNE</div><div>CAPRICORN, 13°41'28"</div><div>SEVENTH HOUSE</div></div>
+			<div class="analysis-analysis">Neptune stays in each sign for around fourteen years, meaning it rules a generation more than a person. It rules dreams, imagination, and the unconscious. Your Neptune is in Capricorn, meaning your entire generation finds inspiration through hard work, responsibility, seriousness, and ambition. It's in your seventh house, meaning that for you, this manifests in your ideal—verging on unrealistic and impractical—about close relationships and long-term partnerships.</div>
 		</div>
 		<div class="analysis-block">
 			<div class="analysis-symbol">J</div>
-			<div class="analysis-stats"><div>PLUTO</div><div></div><div></div></div>
-			<div class="analysis-analysis"></div>
+			<div class="analysis-stats"><div>PLUTO</div><div>SCORPIO, 15°22'45"</div><div>FIFTH HOUSE</div></div>
+			<div class="analysis-analysis">Pluto stays in each sign for up to thirty years, meaning it rules a generation more than a person. It rules power, intensity, obsession, and control. Your Pluto is in Scorpio, meaning your generation's psyche is comparatively passionate, intense, serious, private, self-obsessed, and perceptive. It's in your fifth house, meaning you personally are transforming outdated definitions of romance, creativity, and pleasure.</div>
 		</div> 
 	</div>
   </div>
